2024/7/26: ログイン機能の作成。Userクラスにloginメソッドを追加。

--- a/html/login.html
+++ b/html/login.html
@@ -19,7 +19,7 @@
 
         <main>
 
-            <form class="p-3">
+            <form id="login-form" class="p-3">
                 <div class="">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelpId"
