2024/7/29: ホーム画面で投稿（Post）データをFetchすることに成功した時の初回コミット。

--- a/html/home.html
+++ b/html/home.html
@@ -17,26 +17,17 @@
 
     <div class="container-div">
         <!-- ナビゲーションバー -->
-         <!-- bs-5 snippet を使って元となる nav エレメントを生成 -->
-        <nav
-            class="navbar navbar-expand-sm navbar-dark bg-dark flex-column"
-        >
+        <!-- bs-5 snippet を使って元となる nav エレメントを生成 -->
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark flex-column">
             <a class="navbar-brand" href="#">Navbar</a>
-            <button
-                class="navbar-toggler d-lg-none"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapsibleNavId"
-                aria-controls="collapsibleNavId"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-            ></button>
+            <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+                aria-label="Toggle navigation"></button>
             <div class="collapse navbar-collapse flex-column" id="collapsibleNavId">
                 <ul class="navbar-nav me-auto mt-2 mt-lg-0 flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" aria-current="page"
-                            >Home <span class="visually-hidden">(current)</span></a
-                        >
+                        <a class="nav-link active" href="#" aria-current="page">Home <span
+                                class="visually-hidden">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/html/login.html">ログイン</a>
@@ -45,15 +36,8 @@
                         <a class="nav-link" href="/html/login.html">ユーザ登録</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a
-                            class="nav-link dropdown-toggle"
-                            href="#"
-                            id="dropdownId"
-                            data-bs-toggle="dropdown"
-                            aria-haspopup="true"
-                            aria-expanded="false"
-                            >Dropdown</a
-                        >
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">Dropdown</a>
                         <div class="dropdown-menu" aria-labelledby="dropdownId">
                             <a class="dropdown-item" href="#">Action 1</a>
                             <a class="dropdown-item" href="#">Action 2</a>
@@ -61,21 +45,17 @@
                     </li>
                 </ul>
                 <form class="d-flex my-2 my-lg-0">
-                    <input
-                        class="form-control me-sm-2"
-                        type="text"
-                        placeholder="Search"
-                    />
+                    <input class="form-control me-sm-2" type="text" placeholder="Search" />
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
                         Search
                     </button>
                 </form>
             </div>
         </nav>
-        
+
 
         <main>
-            
+
         </main>
 
     </div>
