--- a/html/home.html
+++ b/html/home.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/common.css">
+    <link rel="stylesheet" href="../static/css/home.css">
 </head>
 
 <body>
@@ -55,6 +56,10 @@
 
 
         <main>
+
+            <div id="posts-div" class="w-full h-100">
+                <!-- ポストデータがここに入る。 -->
+            </div>
 
         </main>
 
