--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="/html/login.html">ログイン</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/html/login.html">ユーザ登録</a>
+                        <a class="nav-link" href="/html/register.html">ユーザ登録</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
