--- a/html/home.html
+++ b/html/home.html
@@ -45,12 +45,9 @@
                         </div>
                     </li>
                 </ul>
-                <form class="d-flex my-2 my-lg-0">
-                    <input class="form-control me-sm-2" type="text" placeholder="Search" />
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-                        Search
-                    </button>
-                </form>
+                <button id="search-button" class="btn btn-outline-success my-2 my-sm-0" type="submit">
+                    Search
+                </button>
             </div>
         </nav>
 
