--- a/html/post.html
+++ b/html/post.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ホーム</title>
+    <title>投稿編集</title>
     <!-- Font Awsomeのアイコンを使うためのリンク 高木アカウント -->
     <script src="https://kit.fontawesome.com/ae8297218d.js" crossorigin="anonymous"></script>
     <!-- BootStrap用CSSをインポート -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/common.css">
-    <link rel="stylesheet" href="/static/css/home.css">
+    <link rel="stylesheet" href="/static/css/postPage.css">
 </head>
 
 <body>
@@ -29,9 +29,6 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="/html/home.html" aria-current="page">Home <span
                                 class="visually-hidden">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/html/post.html">投稿作成</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/html/login.html">ログイン</a>
@@ -57,15 +54,29 @@
 
         <main>
 
-            <div id="posts-div" class="w-full h-100">
-                <!-- ポストデータがここに入る。 -->
+            <div id="post-div" class="w-full h-100">
+                <form id="post-form">
+                    <label for="post-title" class="form-label">タイトル
+                        <input type="text" id="post-title" class="form-control" name="post-title">
+                    <div>
+                    <img id="image-preview" src="/assets/no-image.jpg" class="d-none" alt="画像プレビュー">
+                    </div>
+                    <label for="image-input" class="form-label">画像を選択
+                        <input type="file" id="image-input" accept="image/*">
+                    </label>
+                    <button id="post-button" type="submit" class="btn btn-success">投稿</button>
+                    <button id="cancel-button" class="btn text-bg-light">キャンセル</button>
+                    <label for="post-content" class="form-label">投稿内容
+                        <textarea id="post-content" class="form-control" rows="5" name="post-content"></textarea>
+                    </label>
+                </form>
             </div>
 
         </main>
 
     </div>
 
-    <script src="/static/js/home.js" type="module"></script>
+    <script src="/static/js/postPage.js" type="module"></script>
 
     <!-- BootStrap用JSをインポート -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
