--- a/html/saved_posts.html
+++ b/html/saved_posts.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/common.css">
-    <link rel="stylesheet" href="/static/css/home.css">
+    <link rel="stylesheet" href="/static/css/saved_posts.css">
 </head>
 
 <body>
@@ -32,9 +32,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/html/post.html">投稿作成</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/html/saved_posts.html">保存一覧</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/html/login.html">ログイン</a>
@@ -60,15 +57,15 @@
 
         <main>
 
-            <div id="posts-div" class="w-full h-100">
-                <!-- ポストデータがここに入る。 -->
+            <div id="saved-posts-div" class="w-full h-100">
+                <!-- 保存されたポストデータがここに入る。 -->
             </div>
 
         </main>
 
     </div>
 
-    <script src="/static/js/home.js" type="module"></script>
+    <script src="/static/js/savedPosts.js" type="module"></script>
 
     <!-- BootStrap用JSをインポート -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
