--- a/html/register.html
+++ b/html/register.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/common.css">
+    <link rel="stylesheet" href="/static/css/register.css">
 </head>
 
 <body>
@@ -19,7 +20,15 @@
 
         <main>
 
-            <form id="register-form" class="p-3">
+            <form id="register-form" class="w-full h-100">
+
+                <div id="profile-picture-div">
+                    <label for="profile-picture">
+                        <img src="http://via.placeholder.com/150x150" id="profile-picture-img" />
+                        <input type="file" name="profile-picture" id="profile-picture" />
+                    </label>
+                </div>
+
                 <div class="">
                     <label for="first-name" class="form-label">First Name</label>
                     <input type="text" class="form-control" name="first-name" id="first-name" aria-describedby="firstNameHelpId"
@@ -42,36 +51,76 @@
                 </div>
 
                 <div class="">
-                    <label for="email" class="form-label">Email</label>
+                    <label for="date-of-birth" class="form-label">生年月日</label>
+                    <input type="date" class="form-control" name="date-of-birth" id="date-of-birth" aria-describedby="emailHelpId"
+                        placeholder="" />
+                </div>
+
+                <div class="">
+                    <label for="email" class="form-label">メールアドレス</label>
                     <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelpId"
                         placeholder="" />
                     <small id="emailHelpId" class="form-text text-muted">Help text</small>
                 </div>
 
                 <div class="">
-                    <label for="password" class="form-label">Password</label>
+                    <label for="email-confirm" class="form-label">メールアドレス再入力</label>
+                    <input type="email" class="form-control" name="email-confirm" id="email-confirm" aria-describedby="emailHelpId"
+                        placeholder="" />
+                    <small id="emailConfirmHelpId" class="form-text text-muted">Help text</small>
+                </div>
+
+                <div class="">
+                    <label for="password" class="form-label">パスワード</label>
                     <input type="password" class="form-control" name="password" id="password"
                         aria-describedby="passwordHelpId" placeholder="" />
                     <small id="passwordHelpId" class="form-text text-muted">Help text</small>
                 </div>
 
                 <div class="">
+                    <label for="password-confirm" class="form-label">パスワード再入力</label>
+                    <input type="password" class="form-control" name="password-confirm" id="password-confirm"
+                        aria-describedby="passwordHelpId" placeholder="" />
+                    <small id="passwordConfirmHelpId" class="form-text text-muted">Help text</small>
+                </div>
+
+                <div id="div-for-sex">
+                    <label for="">性別</label>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="male" id="male">
+                        <label class="form-check-label" for="male">
+                            男性
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="female" id="female">
+                        <label class="form-check-label" for="female">
+                            女性
+                        </label>
+                    </div>
+                </div>
+
+                <div id="div-for-terms">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="yes" id="terms">
+                        <label class="form-check-label" for="terms">
+                            利用規約に同意しますか?
+                        </label>
+                    </div>
+                </div>
+
+                <div id="bio-div">
                     <label for="bio" class="form-label">プロファイルメッセージ</label>
-                    <textarea type="text" class="form-control" name="bio" id="bio" aria-describedby="bioHelpId"
-                        placeholder="">
+                    <textarea type="text" class="form-control" name="bio" id="bio" aria-describedby="bioHelpId">
                     </textarea>
                     <small id="bioHelpId" class="form-text text-muted">Help text</small>
                 </div>
 
-                <div class="">
-                    <label for="profile-picture" class="form-label">プロファイル画像</label>
-                    <input type="file" class="form-control" name="profile-picture" id="profile-picture" aria-describedby="profilePictureHelpId">
-                    <small id="profilePictureHelpId" class="form-text text-muted">Help text</small>
+                <div id="submit-button-div">
+                    <button type="submit" class="btn btn-outline-secondary">
+                        Register
+                    </button>
                 </div>
-
-                <button type="submit" class="btn btn-outline-secondary">
-                    Register
-                </button>
             </form>
 
         </main>
