#08-organize: ユーザクラスの微調整。アラートメッセージの実装。

--- a/html/login.html
+++ b/html/login.html
@@ -20,6 +20,11 @@
         <main>
 
             <form id="login-form" class="p-3">
+
+                <div id="div-for-alert">
+                    <div id="alert-message" class=""></div>
+                </div>
+
                 <div class="">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelpId"
