--- a/html/faq.html
+++ b/html/faq.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ホーム</title>
+    <title>FAQ</title>
     <!-- Font Awsomeのアイコンを使うためのリンク 高木アカウント -->
     <script src="https://kit.fontawesome.com/ae8297218d.js" crossorigin="anonymous"></script>
     <!-- BootStrap用CSSをインポート -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/common.css">
-    <link rel="stylesheet" href="/static/css/home.css">
+    <link rel="stylesheet" href="/static/css/faq.css">
 </head>
 
 <body>
@@ -42,18 +42,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/html/register.html">ユーザ登録</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/html/privacy_policy.html">プライバシーポリシー</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/html/terms_of_use.html">利用規約</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/html/specified_commercial_transaction.html">特定商取引法</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/html/faq.html">よくある質問</a>
-                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -72,14 +60,32 @@
 
         <main>
 
-            <div id="posts-div" class="w-full h-100">
-            </div>
+            <div class="w-100 h-100 p-5">
 
+                <!-- PRiENTより引用 -->
+                <h2>よくある質問(FAQ)</h2>
+
+                <div id="search-box-div" class="">
+
+                    <div class="form-floating">
+                        <input id="floatingInputToSearchFaq" class="form-control" type="text" placeholder="test" value="">
+                        <label for="floatingInputToSearchFaq">検索</label>
+                    </div>
+
+                    <div id="search-button-div">
+                        <i id="search-button" class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                </div>
+
+                <div id="faq-div">
+                </div>
+
+            </div>
         </main>
 
     </div>
 
-    <script src="/static/js/home.js" type="module"></script>
+    <script src="/static/js/faq.js" type="module"></script>
 
     <!-- BootStrap用JSをインポート -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
