--- a/html/profile.html
+++ b/html/profile.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/common.css">
-    <link rel="stylesheet" href="/static/css/home.css">
+    <link rel="stylesheet" href="/static/css/profile.css">
 </head>
 
 <body>
@@ -43,9 +43,6 @@
                         <a class="nav-link" href="/html/register.html">ユーザ登録</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/html/profile.html">ユーザプロファイル</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="/html/privacy_policy.html">プライバシーポリシー</a>
                     </li>
                     <li class="nav-item">
@@ -75,14 +72,83 @@
 
         <main>
 
-            <div id="posts-div" class="w-full h-100">
+            <div id="profile-div" class="w-full h-100">
+
+                <div id="profile-user-info-div">
+                    <form id="form-to-change-profile" class="">
+
+                        <div>
+                            <div id="profile-picture-div">
+                                <label for="profile-picture">
+                                    <img src="https://placehold.co/800/orange/white?text=Upload+your+image" id="profile-picture-img" />
+                                    <input type="file" name="profile-picture" id="profile-picture" />
+                                </label>
+                            </div>
+                        </div>
+
+                        <div id="div-for-inputs-of-form">
+                            <div id="div-for-alert">
+                                <div id="alert-message" class=""></div>
+                            </div>
+
+                            <div class="">
+                                <label for="first-name" class="form-label">First Name</label>
+                                <input type="text" class="form-control" name="first-name" id="first-name" aria-describedby="firstNameHelpId" placeholder="" />
+                            </div>
+
+                            <div class="">
+                                <label for="last-name" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" name="last-name" id="last-name" aria-describedby="lastNameHelpId" placeholder="" />
+                            </div>
+
+                            <div class="">
+                                <label for="account-name" class="form-label">Account Name</label>
+                                <input type="text" class="form-control" name="account-name" id="account-name" aria-describedby="accountNameHelpId" placeholder="" />
+                            </div>
+
+                            <div class="">
+                                <label for="date-of-birth" class="form-label">生年月日</label>
+                                <input type="date" class="form-control" name="date-of-birth" id="date-of-birth" aria-describedby="emailHelpId" placeholder="" />
+                            </div>
+
+                            <div class="">
+                                <label for="email" class="form-label">メールアドレス</label>
+                                <input type="text" class="form-control" name="email" id="email" aria-describedby="emailHelpId" placeholder="" />
+                            </div>
+
+                            <div class="">
+                                <label for="email-confirm" class="form-label">メールアドレス再入力</label>
+                                <input type="text" class="form-control" name="email-confirm" id="email-confirm" aria-describedby="emailHelpId" placeholder="" />
+                            </div>
+
+                            <div id="bio-div">
+                                <label for="bio" class="form-label">プロファイルメッセージ</label>
+                                <textarea type="text" class="form-control" name="bio" id="bio-input" aria-describedby="bioHelpId"></textarea>
+                            </div>
+                        </div>
+
+                        <div id="div-for-buttons">
+                            <div id="submit-button-div">
+                                <button type="submit" class="btn btn-outline-success">
+                                    更新
+                                </button>
+                            </div>
+                            <div id="cancel-button-div">
+                                <button type="button" class="btn btn-outline-secondary">
+                                    キャンセル
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
             </div>
 
         </main>
 
     </div>
 
-    <script src="/static/js/home.js" type="module"></script>
+    <script src="/static/js/profile.js" type="module"></script>
 
     <!-- BootStrap用JSをインポート -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
