--- a/html/register.html
+++ b/html/register.html
@@ -18,6 +18,10 @@
 
     <div class="container-div">
 
+        <div id="header-div">
+            <!-- ナビゲーションバーを含むヘッダーが入る -->
+        </div>
+
         <main>
 
             <form id="register-form" class="w-full h-100">
@@ -114,6 +118,7 @@
 
     </div>
 
+    <script src="/static/js/header.js" type="module"></script>
     <script src="/static/js/register.js" type="module"></script>
 
     <!-- BootStrap用JSをインポート -->
